[package]
name = "streamSync"
version = "0.1.0"
edition = "2025"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rdkafka = { version = "0.28", features = ["tokio"] }
warp = "0.3"
log = "0.4"
env_logger = "0.10"
